NXP-4936: rename some templates

--- a/src/main/resources/web/nuxeo.war/layoutDemo/demoWidgets/textWidget.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/demoWidgets/textWidget.xhtml
@@ -6,7 +6,7 @@
   <!-- 
   <ui:define name="content">
 
-    <ui:include src="/layoutDemo/widget_demo_template.xhtml">
+    <ui:include src="/layoutDemo/widget_demo.xhtml">
       <ui:param name="demoLayout" value="#{currentWidgetType.demoLayouts[0]}" />
     </ui:include>
 
