--- a/ftest/selenium/tests/testTextareaWidget.html
+++ b/ftest/selenium/tests/testTextareaWidget.html
@@ -42,18 +42,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>watchA4jRequests</td>
-	<td></td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
+	<td>clickAndWait</td>
 	<td>textareaWidgetLayout_edit_form:textareaWidgetLayout_edit_form_submitButton</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForA4jRequest</td>
-	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
@@ -67,24 +57,14 @@
 	<td>la lala<br />a la ligne</td>
 </tr>
 <tr>
-	<td>watchA4jRequests</td>
-	<td></td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
+	<td>clickAndWait</td>
 	<td>textareaWidgetLayout_edit_form:textareaWidgetLayout_edit_form_submitButton</td>
 	<td></td>
 </tr>
 <tr>
-	<td>waitForA4jRequest</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyText</td>
+	<td>assertText</td>
 	<td>textareaWidgetLayout_view_form:nxl_textareaWidgetLayout_1:nxw_textareaWidget_1</td>
-	<td>la lala<br />a la ligne</td>
+	<td>la lala a la ligne</td>
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
