NXP-6326: add filter form on top of content view results, simplify content view APIs that were altered for NXP-6043 (adding a core session as parameter to handle search document models creation) and merge foldable content view template (introduced for NXP-6413) with default template

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view_result_layout_selector.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view_result_layout_selector.xhtml
@@ -34,17 +34,17 @@ Needed parameters:
     </c:if>
    
     <ul class="layoutViewMode" style="display:inline;">
-     <c:if test="#{contentView.showRefreshPage}">
-       <li>
-         <h:commandLink action="#{contentView.refreshAndRewindPageProvider()}"
+      <c:if test="#{contentView.showRefreshCommand}">
+        <li>
+          <h:commandLink action="#{contentView.refreshAndRewindPageProvider()}"
            id="refreshContentViewLink">
-           <h:graphicImage value="/img/refresh.png"
+            <h:graphicImage value="/img/refresh.png"
              alt="#{messages['label.refresh']}"
              title="#{messages['label.refresh']}"
              id="refreshContentViewImage" />
-         </h:commandLink>
-       </li>
-     </c:if> 
+          </h:commandLink>
+        </li>
+      </c:if> 
       <nxu:set var="contentViewState"
         value="#{contentViewRestActions.getContentViewState(contentView)}">
         <c:if test="#{contentView.currentResultLayout.showCSVExport}">
